Bug 193499 Xprint print/print preview crashes Mozilla patch by Roland.Mainz@informatik.med.uni-giessen.de r=katakai sr=bz